# hecs

./: CHANGELOG.md  Cargo.toml  README.md  entities.rs  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: rust.yml
benches/: bench.rs
examples/: cloning.rs  columnar_clone.rs  ffa_simulation.rs  format.rs  no_std_macros.rs  serialize_to_disk.rs  transform_hierarchy.rs
examples/ffa_parallel/: ffa.rs  main.rs
macros/: Cargo.toml
macros/src/: bundle.rs  bundle_clone.rs  common.rs  lib.rs  query.rs
src/: archetype.rs  batch.rs  borrow.rs  bundle.rs  change_tracker.rs  cloning.rs  column.rs  command_buffer.rs  dynamic.rs  dynamic_query.rs  entities.rs  entity_builder.rs  entity_recorder.rs  entity_ref.rs  lib.rs  parallel.rs  query.rs  query_one.rs  serde.rs  serialize.rs  take.rs  tracked.rs  world.rs
src/ergo/: access.rs  mod.rs  query.rs  scope.rs
src/serialize/: column.rs  mod.rs  row.rs
src/storage/: hash.rs  join.rs  mod.rs  vec.rs
tests/: derive.rs  dynamic_query.rs  no_std_builds.rs  tests.rs
tests/derive/: enum.rs  enum.stderr  enum_query.rs  enum_unsupported.rs  enum_unsupported.stderr  export.rs  generics.rs  named_structs.rs  nested_query.rs  no_prelude.rs  no_prelude.stderr  tuple_structs.rs  tuple_structs.stderr  union.rs  union.stderr  unit_structs.rs  unit_structs.stderr  wrong_lifetime.rs  wrong_lifetime.stderr
tests/no-std-test-crates/macros/: Cargo.toml
tests/no-std-test-crates/macros/src/: lib.rs
