[package]
name = "hecs"
version = "0.10.5"
description = "A fast, minimal, and ergonomic entity-component-system library"
authors = ["Benjamin Saunders <ben.e.saunders@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Ralith/hecs"
readme = "README.md"
keywords = ["ecs", "entity"]
categories = ["data-structures", "game-engines", "no-std"]
rust-version = "1.65"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["std"]
std = []
# Enables derive(Bundle) and derive(Query)
macros = ["hecs-macros"]
# Enables the serialize::column module
column-serialize = ["serde"]
# Enables the serialize::row module
row-serialize = ["serde"]

[dependencies]
hecs-macros = { path = "macros", version = "0.10.0", optional = true }
hashbrown = { version = "0.16", default-features = false, features = ["default-hasher", "inline-more"] }
serde = { version = "1.0.117", default-features = false, optional = true }
spin = { version = "0.10.0", default-features = false, features = ["mutex", "spin_mutex", "lazy"] }
foldhash = { version = "0.2.0", default-features = false }

[dev-dependencies]
criterion = "0.8.0"
rand = "0.9.0"
trybuild = "1.0.23"
serde = { version = "1.0.117", features = ["derive"] }
serde_test = "1.0.117"
bincode = "1.3.3"

[[bench]]
name = "bench"
harness = false
required-features = ["macros"]

[profile.release]
debug = true

[workspace]
members = ["macros", "tests/no-std-test-crates/macros"]


[[example]]
name = "serialize_to_disk"
required-features = ["column-serialize"]
