[package]
name = "test-no-std-macros"
description = "A test crate to ensure that the macro crate and the macro-expanded code can work in a `no_std` environment."
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hecs = { path = "../../..", default-features = false, features = ["macros"] }
